--- a/quimica.html
+++ b/quimica.html
@@ -20,7 +20,7 @@
             <div class="menu__diciplinas"></div>
             <ul>
                 <li><a href="#" Matemática></a>Matemática</li>
-                <li><a href="#" Biologia></a>Biologia</li>
+                <li><a href="biologia.html" Biologia></a>Biologia</li>
                 <li><a href="#" Física></a>Física</li>
             </ul>
             <div class="menu__atividades">
