--- a/quimica.html
+++ b/quimica.html
@@ -34,7 +34,47 @@
 
     </header>
     <main>
-
+        <section class="atividades">
+            <div class="cards">
+                <h2></h2>
+                <ul>
+                    <li class="card">
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li class="card">
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                </ul>
+            </div>
+            <div class="cards">
+                <h2></h2>
+                <ul>
+                    <li class="card">
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li class="card">
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                </ul>
+            </div>
+            <div class="cards">
+                <h2></h2>
+                <ul>
+                    <li class="card">
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li class="card">
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
