--- a/quimica.html
+++ b/quimica.html
@@ -36,11 +36,39 @@
     <main>
         <section class="atividades">
             <div class="cards">
+                <h2>ATIVIDADE</h2>
+                <ul>
+                    <li class="card">
+                        <h3>Atividade 01</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            mollit anim id est laborum.</p>
+                    </li>
+                    <li class="card">
+                        <h3>Atividade 02</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            mollit anim id est laborum.</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="cards">
                 <h2></h2>
                 <ul>
                     <li class="card">
-                        <h3></h3>
-                        <p></p>
+                        <h3>Atividade 03</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            mollit anim id est laborum.</p>
                     </li>
                     <li class="card">
                         <h3></h3>
@@ -52,21 +80,13 @@
                 <h2></h2>
                 <ul>
                     <li class="card">
-                        <h3></h3>
-                        <p></p>
-                    </li>
-                    <li class="card">
-                        <h3></h3>
-                        <p></p>
-                    </li>
-                </ul>
-            </div>
-            <div class="cards">
-                <h2></h2>
-                <ul>
-                    <li class="card">
-                        <h3></h3>
-                        <p></p>
+                        <h3>Atividade 04</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            mollit anim id est laborum.</p>
                     </li>
                     <li class="card">
                         <h3></h3>
